@@ -25,7 +25,7 @@ struct Const
 {
 
 	enum {
-		build_version = 148,
+		build_version = 149,
 #ifdef SINGLE_THREADED
 		seedp_bits = 0,
 #else
