@@ -66,8 +66,8 @@ const vector<uint64_t> ref_hashes = {
 0xd20b29b1abecd9c4,
 0xae7bc1145b22152f,
 0xc43258834622128e,
-0xe8d8c539aeee24d1,
-0x58c74e056adf9a71
+0xc46789eaf0eb46ea,
+0x58c74e056adf9a71,
 };
 
 }
